--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1"
+    "eslint-config-airbnb": "^10.0.1",
+    "mocha": "^3.0.2"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.0",
     "express": "^4.14.0"
   }
 }
