--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "winston": "^2.2.0"
   }
 }
